--- a/index.html
+++ b/index.html
@@ -1486,7 +1486,7 @@
                 </div>
                 
                 <div class="product-card">
-                    <div class="product-image" style="background-image: url('https://images.unsplash.com/photo-1585241645927-c7a8e5840c42?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80');">
+                    <div class="product-image" style="background-image: url('https://raw.githubusercontent.com/hhdhzhnzvz/21/main/Copilot_20250727_114941.png?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80');">
                         <div class="product-badge">3D эффект</div>
                     </div>
                     <div class="product-info">
