--- a/index.html
+++ b/index.html
@@ -1414,7 +1414,7 @@
             </div>
             <div class="products-grid">
                 <div class="product-card">
-                    <div class="product-image" style="background-image: url('https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80');">
+                    <div class="product-image" style="background-image: url('https://raw.githubusercontent.com/hhdhzhnzvz/23/main/Copilot_20250727_120744.png?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80');">
                         <div class="product-badge">3D эффект</div>
                     </div>
                     <div class="product-info">
