--- a/index.html
+++ b/index.html
@@ -1451,7 +1451,7 @@
                 </div>
                 
                 <div class="product-card">
-                    <div class="product-image" style="background-image: url('https://images.unsplash.com/photo-1586082205401-2e26d4ce487b?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80');">
+                    <div class="product-image" style="background-image: url('https://raw.githubusercontent.com/hhdhzhnzvz/44/main/Copilot_20250727_121422.png?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80');">
                         <div class="product-badge">3D эффект</div>
                     </div>
                     <div class="product-info">
@@ -1693,7 +1693,7 @@
                     </div>
                     <h3>Телефон</h3>
                     <p>Звоните с 10:00 до 20:00</p>
-                    <a href="tel:+375291234567" class="contact-link"></a>
+                    <a href="..." class="contact-link"></a>
                 </div>
                 
                 <div class="contact-card">
